# Quasai

./: .clang-format  .clang-tidy  .gitignore  BUILD.bazel  BUILDGUIDE.md  CMakeLists.txt  Doxyfile  Makefile  PROJECTSTRUCTURE.md  README.md  WORKSPACE  compile_flags.txt
.github/workflows/: ci.yml  static.yml
benchmarks/: CMakeLists.txt  benchmark_tensor_ops.cpp
bindings/: CMakeLists.txt
bindings/python/: bindings.cpp
examples/: CMakeLists.txt
examples/cpp/: linear_regression.cpp  neural_network.cpp  simple_example.cpp
examples/python/: linear_regression.py
include/quasai/: linalg.h
include/quasai/autograd/: binary_func.hpp  engine.hpp  function.hpp  metadata.hpp  reduction_func.hpp  unary_func.hpp  view_func.hpp
include/quasai/core/: array.h  array.impl.h  device.hpp  dtype.hpp  error.h  memory.hpp  shape.hpp  tensor.h  tensor.hpp  tensor.impl.h  types.h
include/quasai/data/: csv_parser.hpp
include/quasai/linalg/: matrix.h  matrix.impl.h  ops.h  ops.impl.h  vector.h  vector.impl.h
include/quasai/ml/: decision_tree.h  decision_tree.impl.h  kmeans.h  kmeans.impl.h  regression.h  regression.impl.h  svm.h  svm.impl.h
include/quasai/nn/: activation.h  activation.impl.h  activations.hpp  init.hpp  layer.h  layer.impl.h  linear.hpp  loss.h  loss.hpp  loss.impl.h  model.h  model.hpp  model.impl.h  module.hpp  optimizer.h  optimizer.impl.h  parameter.hpp  sequential.hpp  sequential_builder.hpp
include/quasai/nn/layers/: activations.hpp  flatten.hpp  linear.hpp
include/quasai/nn/modules/: activations.hpp  batch_norm_1d.hpp  dropout.hpp  flatten.hpp  layer_norm.hpp  linear.hpp  sequential.hpp
include/quasai/ops/: core_ops.hpp  cpu_kernel.hpp  scalar_ops.hpp  tensor_ops.hpp
include/quasai/optim/: optimizer.hpp  sgd.hpp
include/quasai/storage/: allocator.hpp  buffer.hpp  dense_storage.hpp
include/quasai/transform/: standard_scaler.hpp
include/quasai/utils/: csv_parser.hpp  logger.hpp  random.hpp
src/core/: array.cpp  error.cpp  tensor.cpp
src/linalg/: matrix.cpp  ops.cpp  vector.cpp
src/ml/: decision_tree.cpp  kmeans.cpp  regression.cpp  svm.cpp
src/nn/: activation.cpp  layer.cpp  loss.cpp  model.cpp  optimizer.cpp
src/quasai/autograd/: binary_func.cpp  engine.cpp  linalg_func.cpp  reduction_func.cpp  unary_func.cpp  view_func.cpp
src/quasai/core/: tensor.cpp
src/quasai/nn/: batch_norm_1d.cpp  dropout.cpp  init.cpp  layer_norm.cpp  linear.cpp  loss.cpp  model.cpp  module.cpp  sequential.cpp
src/quasai/ops/: binary_ops.cpp  linalg_ops.cpp  reduction_ops.cpp  unary_ops.cpp  view_ops.cpp
src/quasai/optim/: sgd.cpp
src/quasai/storage/: allocator.cpp  buffer.cpp
src/quasai/transform/: standard_scaler.cpp
src/tests/core/: array_test.cpp  tensor_test.cpp
src/tests/linalg/: matrix_test.cpp  vector_test.cpp
src/tests/ml/: svm_test.cpp
src/tests/nn/: layer_test.cpp
tests/: CMakeLists.txt
tests/autograd/: engine.cpp
tests/core/: memory.cpp  shape.cpp  tensor.cpp
tests/nn/: linear.cpp  model.cpp  sequential.cpp
tests/nn/modules/: dropout.cpp  linear.cpp  sequential.cpp
tests/ops/: abs.cpp  add.cpp  binary_ops.cpp  broadcast.cpp  broadcast_to_shape.cpp  div.cpp  expand.cpp  heaviside.cpp  linalg_ops.cpp  make_contiguous.cpp  matmul.cpp  mean.cpp  mul.cpp  neg.cpp  reduction_ops.cpp  relu.cpp  reshape.cpp  shape_mismatch.cpp  sigmoid.cpp  signum.cpp  slice.cpp  step.cpp  sub.cpp  sum.cpp  sum_to_shape.cpp  tanh.cpp  transpose.cpp  unary_ops.cpp
tests/ops/binary/: add.cpp  broadcast.cpp  div.cpp  mul.cpp  shape_mismatch.cpp  sub.cpp
tests/ops/linalg/: matmul.cpp
tests/ops/reduction/: broadcast_to_shape.cpp  mean.cpp  sum.cpp  sum_to_shape.cpp
tests/ops/unary/: abs.cpp  heaviside.cpp  neg.cpp  relu.cpp  sigmoid.cpp  signum.cpp  tanh.cpp
tests/ops/view/: expand.cpp  make_contiguous.cpp  reshape.cpp  slice.cpp  transpose.cpp
tests/storage/: allocator.cpp  buffer.cpp
tests/transform/: standard_scaler.cpp
