# Quasai Main Build File
# Build configuration for the root of the framework

licenses(["notice"])

# Core library
cc_library(
    name = "core",
    srcs = glob([
        "src/core/**/*..cc",
    ]),
    hdrs = glob([
        "include/quasai/core/**/*.h",
    ]),
    includes = ["include"],
    deps = [
        ":linalg",
    ],
)

# Linear algebra library
cc_library(
    name = "linalg",
    srcs = glob([
        "src/linalg/**/*.cc",
    ]),
    hdrs = glob([
        "include/quasai/linalg/**/*.h",
    ]),
    includes = ["include"],
    deps = [":core"],
)

# Neural network library
cc_library(
    name = "nn",
    srcs = glob([
        "src/nn/**/*.cc",
    ]),
    hdrs = glob([
        "include/quasai/nn/**/*.h",
    ]),
    includes = ["include"],
    deps = [":core", ":linalg"],
)

# Machine learning library
cc_library(
    name = "ml",
    srcs = glob([
        "src/ml/**/*.cc",
    ]),
    hdrs = glob([
        "include/quasai/ml/**/*.h",
    ]),
    includes = ["include"],
    deps = [":core", ":linalg"],
)

# Main library (all components)
cc_library(
    name = "quasai",
    srcs = glob([
        "src/**/*.cc",
    ]),
    hdrs = glob([
        "include/quasai/**/*.h",
    ]),
    includes = ["include"],
    deps = [
        ":core",
        ":linalg",
        ":nn",
        ":ml",
    ],
)

# Main executable
cc_binary(
    name = "quasai_main",
    srcs = ["src/main.cpp"],
    deps = [":quasai"],
)
